# face_recognition_project

./: CMakeLists.txt  main.cpp
